docs/releases/v0.5.0/npm-publication.md
# npm publication evidence for v0.5.0

Status: published

This file is generated by `close-release-publication` from public GitHub, npm, and npx evidence.

```yaml
publication:
  package: "@xiongxianfei/rigorloop"
  version: "0.5.0"
  release_tag: "v0.5.0"
  mode: "trusted-publishing"
  status: "published"

workflow:
  release_workflow: ".github/workflows/release.yml"
  published_by_workflow: true
  unsupported_tags_rejected: true

tarball:
  filename: "xiongxianfei-rigorloop-0.5.0.tgz"
  sha256: "not-recorded-for-trusted-publishing"
  pack_command: "npm pack --prefix packages/rigorloop"
  content_check: "pass"
  smoke_result: "pass"

trusted_publishing:
  configured: true
  workflow: ".github/workflows/release.yml"
  id_token_write: true

bootstrap:
  used: false
  approving_maintainer: "not-applicable"
  publish_command: "not-applicable"

github:
  release_url: "https://github.com/xiongxianfei/rigorloop/releases/tag/v0.5.0"

npm:
  published: true
  package_url: "https://www.npmjs.com/package/@xiongxianfei/rigorloop/v/0.5.0"
  published_at: "2026-09-02T08:53:26.536Z"
  dist_tag_latest: "0.5.0"
  integrity: "sha512-9rYLSeX9VR2vjePxeIebG3p71cnJ5qqnTl9H/odDbbkpq6GYZzx/+Url41CWMdveW1nB0FhtGj8H2KEA2BRwnw=="
  tarball: "https://registry.npmjs.org/@xiongxianfei/rigorloop/-/rigorloop-0.5.0.tgz"

version_smoke:
  command: "npx @xiongxianfei/rigorloop@0.5.0 version"
  result: "pass"
  output_summary: "@xiongxianfei/rigorloop 0.5.0"

target_init_smoke:
  codex:
    command: "npx @xiongxianfei/rigorloop@0.5.0 init codex"
    npm_version: "0.5.0"
    package_source: "npm public registry"
    target: "codex"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.5.0/rigorloop-adapter-codex-v0.5.0.zip"
    archive_sha256: "sha256:aff06abeafe7edbb7de402b2f6bc499f3021a6b882700c6f9bfefb0817402884"
    installed_roots: ".agents/skills"
    tree_hashes: "sha256:35809540a1e981975b61719c73c82f6706460b0d287ed63d7f472738e2540f31"
    file_counts: "99"
    command_output_summary: "RigorLoop initialized with verified Codex target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false

  claude:
    command: "npx @xiongxianfei/rigorloop@0.5.0 init claude"
    npm_version: "0.5.0"
    package_source: "npm public registry"
    target: "claude"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.5.0/rigorloop-adapter-claude-v0.5.0.zip"
    archive_sha256: "sha256:f918b95365f3b7d3e2b9e6998ad5a511bcbde2f2c3f4764f99fe26dd27622ba7"
    installed_roots: ".claude/skills"
    tree_hashes: "sha256:487c1d14a8cebfa10387394c8a00af56205feaab7440c4ac7c1dc52bda55e5ab"
    file_counts: "99"
    command_output_summary: "RigorLoop initialized with verified Claude Code target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false

  opencode:
    command: "npx @xiongxianfei/rigorloop@0.5.0 init opencode"
    npm_version: "0.5.0"
    package_source: "npm public registry"
    target: "opencode"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.5.0/rigorloop-adapter-opencode-v0.5.0.zip"
    archive_sha256: "sha256:a47ad8bcf18c3d058b4d035b780d281469480bde927ff26f72cd330d1a1cb059"
    installed_roots: ".opencode/skills;.opencode/commands"
    tree_hashes: ".opencode/skills=sha256:487c1d14a8cebfa10387394c8a00af56205feaab7440c4ac7c1dc52bda55e5ab;.opencode/commands=sha256:28e2ea066fb9cadea6a1c9c74d220bd606d270ffaadf4d4ad75f85eb75ca8e9f"
    file_counts: ".opencode/skills=99;.opencode/commands=10"
    command_output_summary: "RigorLoop initialized with verified opencode target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false
```

| Target | Command | npm version | Package source | Public archive URL | Installed root(s) | Tree hash value(s) | File count(s) | Command output summary | Archive verified | Tree verified | Result | Closeout blocker |
|---|---|---|---|---|---|---|---|---|---|---|---|---|
| codex | `npx @xiongxianfei/rigorloop@0.5.0 init codex` | `0.5.0` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.5.0/rigorloop-adapter-codex-v0.5.0.zip | .agents/skills | sha256:35809540a1e981975b61719c73c82f6706460b0d287ed63d7f472738e2540f31 | 99 | RigorLoop initialized with verified Codex target support. | true | true | pass | none |
| claude | `npx @xiongxianfei/rigorloop@0.5.0 init claude` | `0.5.0` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.5.0/rigorloop-adapter-claude-v0.5.0.zip | .claude/skills | sha256:487c1d14a8cebfa10387394c8a00af56205feaab7440c4ac7c1dc52bda55e5ab | 99 | RigorLoop initialized with verified Claude Code target support. | true | true | pass | none |
| opencode | `npx @xiongxianfei/rigorloop@0.5.0 init opencode` | `0.5.0` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.5.0/rigorloop-adapter-opencode-v0.5.0.zip | .opencode/skills;.opencode/commands | .opencode/skills=sha256:487c1d14a8cebfa10387394c8a00af56205feaab7440c4ac7c1dc52bda55e5ab;.opencode/commands=sha256:28e2ea066fb9cadea6a1c9c74d220bd606d270ffaadf4d4ad75f85eb75ca8e9f | .opencode/skills=99;.opencode/commands=10 | RigorLoop initialized with verified opencode target support. | true | true | pass | none |
