docs/releases/v1.0.0/npm-publication.md
# npm publication evidence for v1.0.0

Status: published

This file is generated by `close-release-publication` from public GitHub, npm, and npx evidence.

```yaml
publication:
  package: "@xiongxianfei/rigorloop"
  version: "1.0.0"
  release_tag: "v1.0.0"
  mode: "trusted-publishing"
  status: "published"

workflow:
  release_workflow: ".github/workflows/release.yml"
  published_by_workflow: true
  unsupported_tags_rejected: true

tarball:
  filename: "xiongxianfei-rigorloop-1.0.0.tgz"
  sha256: "not-recorded-for-trusted-publishing"
  pack_command: "npm pack --prefix packages/rigorloop"
  content_check: "pass"
  smoke_result: "pass"

trusted_publishing:
  configured: true
  workflow: ".github/workflows/release.yml"
  id_token_write: true

bootstrap:
  used: false
  approving_maintainer: "not-applicable"
  publish_command: "not-applicable"

github:
  release_url: "https://github.com/xiongxianfei/rigorloop/releases/tag/v1.0.0"

npm:
  published: true
  package_url: "https://www.npmjs.com/package/@xiongxianfei/rigorloop/v/1.0.0"
  published_at: "2026-09-10T11:26:52.267Z"
  dist_tag_latest: "1.0.0"
  integrity: "sha512-KeHBSo7H7cVhAiK/o5LxVJxulQy7ylSj7vLi4OFLxQEYRkw+mB94YMtvi25QRpOemghli21z1Pb7W/jfHBCY5w=="
  tarball: "https://registry.npmjs.org/@xiongxianfei/rigorloop/-/rigorloop-1.0.0.tgz"

version_smoke:
  command: "npx @xiongxianfei/rigorloop@1.0.0 version"
  result: "pass"
  output_summary: "@xiongxianfei/rigorloop 1.0.0"

target_init_smoke:
  codex:
    command: "npx @xiongxianfei/rigorloop@1.0.0 init codex"
    npm_version: "1.0.0"
    package_source: "npm public registry"
    target: "codex"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v1.0.0/rigorloop-adapter-codex-v1.0.0.zip"
    archive_sha256: "sha256:d5813baede0e3503e41d29c13416f6c8cb6e0d84d5a1df737f35c041b035b17c"
    installed_roots: ".agents/skills"
    tree_hashes: "sha256:492f53eed39a563febefaa8963dd7c32ac7fcb05879c257a5dc306c2e3d6865b"
    file_counts: "137"
    command_output_summary: "public init codex completed"
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false

  claude:
    command: "npx @xiongxianfei/rigorloop@1.0.0 init claude"
    npm_version: "1.0.0"
    package_source: "npm public registry"
    target: "claude"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v1.0.0/rigorloop-adapter-claude-v1.0.0.zip"
    archive_sha256: "sha256:028444efb250aae3e7aaa4836c643bfb5df23d7b1a1563c106c9f786085e84ee"
    installed_roots: ".claude/skills"
    tree_hashes: "sha256:615b4eccb57340ab4134a822e2b2a9cf52f20a9fc86c51daced98563039e31bd"
    file_counts: "137"
    command_output_summary: "public init claude completed"
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false

  opencode:
    command: "npx @xiongxianfei/rigorloop@1.0.0 init opencode"
    npm_version: "1.0.0"
    package_source: "npm public registry"
    target: "opencode"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v1.0.0/rigorloop-adapter-opencode-v1.0.0.zip"
    archive_sha256: "sha256:ad562abb81624ca8fe6f6fad7c220b2baaafd2e77af37e55e47aabd00af32797"
    installed_roots: ".opencode/skills;.opencode/commands"
    tree_hashes: ".opencode/skills=sha256:615b4eccb57340ab4134a822e2b2a9cf52f20a9fc86c51daced98563039e31bd;.opencode/commands=sha256:8e3b0412aed1ba53d733e42a70fd455473fd0c3952e173312f3ef06c6e3d3ca5"
    file_counts: ".opencode/skills=137;.opencode/commands=9"
    command_output_summary: "public init opencode completed"
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false
```

| Target | Command | npm version | Package source | Public archive URL | Installed root(s) | Tree hash value(s) | File count(s) | Command output summary | Archive verified | Tree verified | Result | Closeout blocker |
|---|---|---|---|---|---|---|---|---|---|---|---|---|
| codex | `npx @xiongxianfei/rigorloop@1.0.0 init codex` | `1.0.0` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v1.0.0/rigorloop-adapter-codex-v1.0.0.zip | .agents/skills | sha256:492f53eed39a563febefaa8963dd7c32ac7fcb05879c257a5dc306c2e3d6865b | 137 | public init codex completed | true | true | pass | none |
| claude | `npx @xiongxianfei/rigorloop@1.0.0 init claude` | `1.0.0` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v1.0.0/rigorloop-adapter-claude-v1.0.0.zip | .claude/skills | sha256:615b4eccb57340ab4134a822e2b2a9cf52f20a9fc86c51daced98563039e31bd | 137 | public init claude completed | true | true | pass | none |
| opencode | `npx @xiongxianfei/rigorloop@1.0.0 init opencode` | `1.0.0` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v1.0.0/rigorloop-adapter-opencode-v1.0.0.zip | .opencode/skills;.opencode/commands | .opencode/skills=sha256:615b4eccb57340ab4134a822e2b2a9cf52f20a9fc86c51daced98563039e31bd;.opencode/commands=sha256:8e3b0412aed1ba53d733e42a70fd455473fd0c3952e173312f3ef06c6e3d3ca5 | .opencode/skills=137;.opencode/commands=9 | public init opencode completed | true | true | pass | none |
